# imnotgui-raylib-cpp

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README-KOR.md  README.md  credit  differences.md
.github/workflows/: windows.yml
example/: CMakeLists.txt  Makefile  demo.cpp  korean.cpp  layout.cpp  spline.cpp  synchronization.cpp  text_region.cpp
example/include/: rtexloader.hpp  spline.hpp
example/resources/: atlas.h  atlas.rtp  atlas_sync.rtp  font_big.fnt  font_medium.fnt
include/: imnotgui.hpp  imnotgui_extra.hpp
src/: CMakeLists.txt  draw.cpp  imnotgui.cpp  init.cpp  iui_button.cpp  iui_checkbox.cpp  iui_multiline_textbox.cpp  iui_slider.cpp  iui_tab.cpp  iui_textbox.cpp  layout.cpp  nagagui.cpp  test.cpp
